--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,24 @@
 .vscode/
 MerenjeSoftvera/
 OS/images/
+*.aux
+*.lof
+*.log
+*.lot
+*.fls
+*.out
+*.toc
+*.fmt
+*.fot
+*.cb
+*.cb2
+.*.lb
+
+*.fdb_latexmk
+*.nav
+*.snm
+*.synctex.gz
+*.vrb
+
+*/bin
+*/img
